# appgrid

./: .clang-tidy  .gitignore  CMakeLists.txt  Messages.sh  PKGBUILD  PKGBUILD-aur  README.md  dev.xarbit.appgrid.metainfo.xml  metadata-panel.json.in  metadata.json.in
.github/workflows/: build.yml  release.yml
package/: metadata.json
package-panel/: metadata.json
po/: dev.xarbit.appgrid.pot
po/bg/: dev.xarbit.appgrid.po
po/bs/: dev.xarbit.appgrid.po
po/cs/: dev.xarbit.appgrid.po
po/da/: dev.xarbit.appgrid.po
po/de/: dev.xarbit.appgrid.po
po/el/: dev.xarbit.appgrid.po
po/es/: dev.xarbit.appgrid.po
po/et/: dev.xarbit.appgrid.po
po/fi/: dev.xarbit.appgrid.po
po/fr/: dev.xarbit.appgrid.po
po/ga/: dev.xarbit.appgrid.po
po/hr/: dev.xarbit.appgrid.po
po/hu/: dev.xarbit.appgrid.po
po/it/: dev.xarbit.appgrid.po
po/lt/: dev.xarbit.appgrid.po
po/lv/: dev.xarbit.appgrid.po
po/mk/: dev.xarbit.appgrid.po
po/nb/: dev.xarbit.appgrid.po
po/nl/: dev.xarbit.appgrid.po
po/pl/: dev.xarbit.appgrid.po
po/pt/: dev.xarbit.appgrid.po
po/ro/: dev.xarbit.appgrid.po
po/ru/: dev.xarbit.appgrid.po
po/sk/: dev.xarbit.appgrid.po
po/sl/: dev.xarbit.appgrid.po
po/sq/: dev.xarbit.appgrid.po
src/: appfiltermodel.cpp  appfiltermodel.h  appgridpanelplugin.cpp  appgridpanelplugin.h  appgridplugin.cpp  appgridplugin.h  appgridplugin_register.cpp  appmodel.cpp  appmodel.h  updatechecker.cpp  updatechecker.h
tests/: CMakeLists.txt  stubappmodel.h  test_appfiltermodel.cpp  test_filter.cpp  test_search_ranking.cpp  test_sort.cpp
(+52 files in other folders)
